# ofxCvBlobFinder

./: CMakeLists.txt  README
example/: main.cpp  testApp.cpp  testApp.h
src/: ofxCvBlobFinder.cpp  ofxCvBlobFinder.h  ofxCvComplexBlob.cpp  ofxCvComplexBlob.h
